로그인하면 main으로 화면전환 및 회원가입 기능 구현 (When you log in, you can switch the screen to main and sign up)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,4 +24,10 @@
         android:layout_height="wrap_content"
         android:text="Login" />
 
+    <Button
+        android:id="@+id/resgisterButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="register" />
+
 </LinearLayout>
