--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,7 +8,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello, this is MainFragment!" />
+        android:text="Hello, this is Fragment!" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/music_recyclerview"
